@@ -3920,3 +3920,5 @@ Changelog for GXemul:
 		commands.
 		Implementing support for re-executing commands without args
 		("step" and "backward-step" so far).
+20090724	The CPUComponent's .unassemble and .dump methods, and the
+		RAMComponent's .dump method, are now also re-executable.
